--- a/container/ClearSky/deployments/Dockerfile
+++ b/container/ClearSky/deployments/Dockerfile
@@ -1,6 +1,6 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
-ADD api-boot-0.0.1.jar api.jar
-RUN sh -c 'touch /api.jar'
+ADD clearskyboot-0.0.1.jar clearskyboot.jar
+RUN sh -c 'touch /clearskyboot.jar'
 ENV JAVA_OPTS="-Dspring.profiles.active=prod"
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /api.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /clearskyboot.jar" ]
