--- a/container/ClearSky/src/main/resources/application-prod.properties
+++ b/container/ClearSky/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 #DataSource Properties
-spring.datasource.url=jdbc:mysql://egen.cfuxqvpmatbv.us-east-1.rds.amazonaws.com:3306/example_db?useSSL=false
+spring.datasource.url=jdbc:mysql://egendbinstance.cvtmhi6romhc.us-west-1.rds.amazonaws.com:3306/weather_db?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=password1234
+spring.datasource.password=Supersaiyan6$
